--- a/opomniki/opomniki.html
+++ b/opomniki/opomniki.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <title>..:: Opomniki ::..</title>
-    <meta charset="UTF-8">    
+    <meta charset="UTF-8">   
+    <link rel="stylesheet" href="stili.css">
+	<script src="skripta.js"></script>
 </head>
 <body>
 <div class="pokrivalo">
@@ -22,7 +24,6 @@
 <glava>
 Pozdravljeni, <span id="uporabnik"></span>!
 </glava>
-
 <!-- TELO -->
 <telo id="opomniki">
 
